--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,10 +14,12 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
-          distribution: 'zulu'
-          java-version: 21
+          distribution: temurin
+          java-version: 25
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
+        with:
+          cache-read-only: false
       - name: Set gradlew executable
         run: chmod +x gradlew
       - name: Publish to GitHub Packages
