--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,9 @@ jobs:
           cache-read-only: false
       - name: Set gradlew executable
         run: chmod +x gradlew
+      - name: Set up node
+        run: |
+          ./gradlew kotlinNodeJsSetup kotlinWasmNodeJsSetup kotlinNpmInstall kotlinWasmNpmInstall
       - name: Publish to GitHub Packages
         continue-on-error: true
         run: |
