--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,22 +13,20 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v6
-
       - name: Set up JDK 25
         uses: actions/setup-java@v5
         with:
           distribution: temurin
           java-version: 25
-
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
-
       - name: Set gradlew executable
         run: chmod +x gradlew
-
+      - name: Set up node
+        run: |
+          ./gradlew kotlinNodeJsSetup kotlinWasmNodeJsSetup kotlinNpmInstall kotlinWasmNpmInstall
       - name: Run tests
         run: ./gradlew test --continue
-
       - name: Upload test reports
         if: always()
         uses: actions/upload-artifact@v5
