--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           ./gradlew kotlinNodeJsSetup kotlinWasmNodeJsSetup kotlinNpmInstall kotlinWasmNpmInstall
       - name: Run tests
-        run: ./gradlew test --continue
+        run: ./gradlew allTests --continue
       - name: Upload test reports
         if: always()
         uses: actions/upload-artifact@v5
