--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,24 +3,26 @@
 # https://docs.gradle.org/current/userguide/platforms.html#sub::toml-dependencies-format
 
 [versions]
-kotlin = "2.3.0"
+kotlin = "2.3.10"
 kotlinx-coroutines = "1.10.2"
 kotlinx-browser = "0.5.0"
-dslUtilities = "1.0.3"
-compose = "1.9.3"
+dslUtilities = "1.0.4"
+compose = "1.10.0"
 agp = "8.12.3"
 androidx = "1.17.0"
 androidx-annotation = "1.9.1"
 androidx-test-runner = "1.7.0"
 androidx-test-junit = "1.3.0"
 dokka = "2.1.0"
-mavenPublish = "0.35.0"
+mavenPublish = "0.36.0"
 
 [libraries]
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 kotlinx-browser = { module = "org.jetbrains.kotlinx:kotlinx-browser", version.ref = "kotlinx-browser" }
 dslUtilities = { module = "top.ltfan.dslutilities:dsl-utilities", version.ref = "dslUtilities" }
+compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose" }
+compose-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "compose" }
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidx" }
 androidx-annotation = { module = "androidx.annotation:annotation", version.ref = "androidx-annotation" }
 androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidx-test-runner" }
